# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-09-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the default version of Python to 3

2017-09-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update quickrand

2017-09-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the service configuration option response_timeout_immediate_max
      when request_name_lookup is set to async and a lookup timeout occurs
    * Fix cloudi_queue:send when PatternPid is provided as undefined

2017-09-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix release script to always succeed with stop (for openrc-run)
    * Improve configure script rebar check
    * Fix monkey_latency time_gaussian bug that would almost never occur
      (the Box-Mullter transformation X1 would need to be 0.0)
    * Update quickrand
    * Fix dialyzer execution to match the new paths of
      the Erlang integration tests
    * Add environment variable arguments
      CLOUDI_ARG_NODE_NAME_SHORT, CLOUDI_ARG_NODE_NAME_LONG, and
      CLOUDI_ARG_NODE_COOKIE to the configure script for modifying the
      vm.args file used in the CloudI release

2017-08-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix automake build of Erlang source code for parallel use

2017-08-10 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Finished improving the automake build of Java source code
    * Fix the install step of the Haskell integration tests

2017-08-09 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Reduce the release script functionality to the core necessary and
      add default values for all erl and epmd environment variables
    * Fix Java CloudI API compilation for parallel make

2017-08-08 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the runtime current working directory to the log directory

2017-08-06 Michael Truog   <mjtruog [at] gmail (dot) com>
