@@ -4,6 +4,8 @@
 2017-09-05 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Change the default version of Python to 3
+    * Add update of timeout_async and timeout_sync to
+      cloudi_service_http_cowboy
 
 2017-09-04 Michael Truog   <mjtruog [at] gmail (dot) com>
 
